# tcp-hashsumcalculator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run.sh  teststrings.txt
src/: CMakeLists.txt  hasher.cpp  hasher.h  ihasher.h  isession.h  main.cpp  session.cpp  session.h  tcpserver.cpp  tcpserver.h
tests/: CMakeLists.txt  hasher.cc  session.cc  tcpserver.cc
